# Platform-Backend

./: Dockerfile  README.md  dev.Dockerfile  dev.docker-compose.yaml  pyproject.toml  tasks.md
.github/workflows/: docker-build.yaml
src/: ai_template.md  app.py  settings.py
src/api/: exceptions.py  general_schemas.py  schemas.py  utils.py
src/api/auth/: dependencies.py  endpoints.py  schemas.py
src/api/complaints/: dependencies.py  endpoints.py  events.py  schemas.py
src/api/health/: endpoints.py  schemas.py
src/api/students/: dependencies.py  endpoints.py  schemas.py
src/api/submissions/: dependencies.py  endpoints.py  events.py  schemas.py
src/api/tasks/: dependencies.py  endpoints.py  schemas.py
src/infrastructure/fastapi/: __init__.py  cors.py  docs.py  error_handling.py  lifespan.py  routers.py
src/infrastructure/faststream/: dependencies.py  kafka_router.py
src/infrastructure/minio/: client.py  scripts.py
src/infrastructure/sqlalchemy/: engine.py  models.py  scripts.py
src/infrastructure/sqlalchemy/services/: __init__.py  auth.py  complaints.py  students.py  submissions.py  tasks.py
src/services/: exceptions.py
src/services/auth/: __init__.py  constants.py  dto.py  exceptions.py  interface.py
src/services/complaints/: __init__.py  dto.py  interface.py
src/services/password/: __init__.py  constants.py  implementation.py
src/services/stundents/: __init__.py  dto.py  exceptions.py  interface.py
src/services/submissions/: __init__.py  dto.py  interface.py
src/services/tasks/: __init__.py  dto.py  exceptions.py  interface.py
